--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -H 10.0.1.138",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,7 +11,7 @@
   "dependencies": {
     "@react-google-maps/api": "^2.20.6",
     "@svgr/webpack": "^8.1.0",
-    "framer-motion": "^11.3.21",
+    "framer-motion": "^11.18.2",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
